# g7_openarm_vla

./: .gitignore  .gitmodules  README.md  config.toml  pyproject.toml
model/: g7_openarm.xml  scene.xml
model/meshes/: AMR_FLW_link.STL  AMR_FL_link.STL  AMR_FRW_link.STL  AMR_FR_link.STL  AMR_RLW_link.STL  AMR_RL_link.STL  AMR_RRW_link.STL  AMR_RR_link.STL  AMR_base_link_collision.STL  L_link1.STL  L_link2.STL  L_link3.STL  L_link4.STL  L_link5.STL  L_link6.STL  L_link6_collision.STL  L_link6_collision.STLbak  L_link7.STL  L_link7_collision.STL  L_link7_collision.STLbak  R_link1.STL  R_link2.STL  R_link3.STL  R_link4.STL  R_link5.STL  R_link6.STL  R_link7.STL  R_link7_collision.STL  chest_link.STL  chest_link_collision.STL  gripper_LL_link.STL  gripper_LR_link.STL  gripper_LR_link_collision.STL  gripper_RL_link.STL  gripper_RL_link_collision.STL  gripper_RR_link.STL  lower_arm_L_link_collision.STL  lower_arm_L_link_collision.STLbak  openarm_base_link.STL  openarm_base_link_collision.STL  (+5 more)
model/urdf/: g7_openarm.urdf
modules/g7_openarm_config/: pyproject.toml
modules/g7_openarm_config/src/g7_openarm_config/: __init__.py  base.py  loader.py
modules/g7_openarm_hardware/: pyproject.toml
modules/g7_openarm_hardware/src/g7_openarm_hardware/: cli.py  config.py  imu_cli.py
modules/g7_openarm_idl/: pyproject.toml
modules/g7_openarm_idl/src/g7_openarm_idl/: __init__.py  amr_cmd.py  amr_cmd.pyi  ee_target.py  ee_target.pyi  gr00t_cmd.py  gr00t_cmd.pyi  odom.py  odom.pyi  openarm_cmd.py  openarm_cmd.pyi  wbclowcmd.py  wbclowcmd.pyi
modules/g7_openarm_lowlevel/: pyproject.toml
modules/g7_openarm_lowlevel/src/g7_openarm_lowlevel/: cli.py  config.py  controller.py
modules/g7_openarm_monitor/: pyproject.toml
modules/g7_openarm_monitor/src/g7_openarm_monitor/: amrcmd_analyze.py  cli.py  config.py
modules/g7_openarm_mujoco/: pyproject.toml
modules/g7_openarm_mujoco/src/g7_openarm_mujoco/: cli.py  config.py  real_cli.py
modules/g7_openarm_pinnzoo/: pyproject.toml
modules/g7_openarm_pinnzoo/src/g7_openarm_pinnzoo/: __init__.py  pinnzoo_binding.py  pinnzoo_func.py
modules/g7_openarm_state_estimator/: pyproject.toml
modules/g7_openarm_state_estimator/src/g7_openarm_state_estimator/: amr_ekf.py  cli.py  config.py
modules/g7_openarm_wbc/: pyproject.toml
modules/g7_openarm_wbc/src/g7_openarm_wbc/: cli.py  config.py  ik_solver.py  utils.py
modules/g7_oprnarm_wbc/: pyproject.toml
modules/g7_oprnarm_wbc/src/g7_openarm_wbc/: cli.py  ik_solver.py
scripts/: analyze.py  run_all.py  run_real.py
