[project]
name = "g7-openarm-hardware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g7-openarm-config",
    "openarm-can",
    "unitree-sdk2py",
    "xspublic",
]

[tool.uv.sources]
g7-openarm-config = { workspace = true }
openarm-can = { git = "https://github.com/umeow0716/openarm_can", subdirectory = "python" }
unitree-sdk2py = { path = "../../third_party/unitree_sdk2_python", editable = true }
xspublic = { git = "https://github.com/jiminghe/xspublic", subdirectory = "bindings" }

[project.scripts]
g7-hardware = "g7_openarm_hardware.cli:main"
g7-imu = "g7_openarm_hardware.imu_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g7_openarm_hardware"]
