[project]
name = "g7-openarm-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g7-openarm-config",
    "g7-openarm-idl",
    "unitree-sdk2py",
]

[tool.uv.sources]
g7-openarm-config = { workspace = true }
g7-openarm-idl = { workspace = true }
unitree-sdk2py = { path = "../../third_party/unitree_sdk2_python", editable = true }

[project.scripts]
g7-monitor = "g7_openarm_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g7_openarm_monitor"]
