[project]
name = "g7-openarm-mujoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.10.0",
    "unitree-sdk2py",
]

[tool.uv.sources]
unitree-sdk2py = { path = "../../third_party/unitree_sdk2_python", editable = true }

[project.scripts]
g7-mujoco = "g7_openarm_mujoco.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g7_openarm_mujoco"]
